# space-hoarder-cleaner

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/files/: file_to_delete.rs  mod.rs
src/files/types/: file_types.rs  mod.rs
src/hoarder_management/: mod.rs
src/hoarder_management/cleaning_service/: mod.rs
src/hoarder_management/indexer/: index_service.rs
src/hoarder_management/types/: types.rs
