[package]
name = "space-hoarder-cleaner"
version = "0.1.0"
edition = "2021"
author = "Emanuel Farauanu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
tui = "0.17"
crossterm = "0.22"
thiserror = "1.0"
jwalk = "0.6"
filesize = "0.2"
nix = "0.23.1"
anyhow = "1.0"
fs_extra = "1.2"
humansize = "1.1.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["securitybaseapi", "debugapi"] }

[dev-dependencies]
insta = "1.14.0"
